# sweet-ocp

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: solve_all_ocps.py  solve_hs_problems.py  solving_specific_ocp.py  solving_standard_nlp_in_acados.py
experiments/: opts.py  solve_hs_problems.py  solving_specific_ocp.py  solving_standard_nlp_in_acados.py
sweet_ocp/models/: bicycle_models.py  cart_pendulum_models.py  double_pendulum_models.py  free_flying_robot_model.py  moonlander_models.py  overhead_crane_models.py  simple_pendulum_models.py  unicycle_models.py
sweet_ocp/ocps/: altro_acrobot_problem.py  altro_dubins_car_escape.py  altro_dubins_car_obstacle.py  altro_dubins_car_parallel_parking.py  altro_simple_pendulum_problem.py  betts_free_flying_robot_problem.py  car_racing_time_optimal_p2p_motion.py  cops_catalyst_mixing.py  cops_flow_problem.py  cops_goddard_rocket.py  cops_hangglider_problem.py  cops_particle_steering.py  cops_robot_problem.py  fatrop_moonlander_problem.py  grampc_overhead_crane_problem.py  hour_glass_time_optimal_p2p_motion.py  ocp_utils.py  time_optimal_overhead_crane_problem.py  time_optimal_swing_up.py
sweet_ocp/standard_nlps/: fourth_order_polynomial.py  globalized_convex_problem.py  inconsistent_qp_linearization.py  infeasible_problem_nactive.py  infeasible_problem_unique.py  maratos_test_problem.py  simple_degenerate_problem.py
sweet_ocp/standard_nlps/hock_schittkowski/: hs001.py  hs002.py  hs003.py  (+112 more)
sweet_ocp/utils/: standard_nlp_util.py
sweet_ocp/visualization/: cart_pendulum_visualization.py  performance_plot.py
